# gili-cli

./: .env.example  .gitignore  AGENTS.md  ATRIBUTOS_FILTRADOS.md  CAMPO_ATTRIBUTE_SET_ID_AGREGADO.md  CORRECCION_ENV.md  CORRECCION_URL_Y_MENSAJES.md  ENRIQUECIMIENTO_PRODUCTO.md  ENRIQUECIMIENTO_TOTAL_ATRIBUTOS.md  EXTRACCION_LOGO_IMPLEMENTADA.md  IMPLEMENTATION_PRODUCT_COMMAND.md  INSTALACION_COMPLETADA.md  PROMT_GENERADOR_DESCRIPCIONES.md  RESUMEN_PROYECTO.md  SALIDA_SIMPLIFICADA.md  main.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  test_enrichment.py  test_product_command.py
src/: __init__.py
src/config/: __init__.py  constants.py  settings.py
src/connectors/: __init__.py  flexxus.py  google_sheets.py  merchant.py
src/core/: __init__.py  client.py  exceptions.py
src/operations/: __init__.py  export_category.py  manual_update.py  monthly_report.py
src/processors/: __init__.py  rfm.py  scoring.py
src/utils/: __init__.py  helpers.py  logging.py
